deploy: julianbrooks/comp2850-hci-mdbook@3e80ee7474afd21f2c3933b39a5a445bbb74ec5c

--- a/wk06/wk6-lab1-html-css-htmx.html
+++ b/wk06/wk6-lab1-html-css-htmx.html
@@ -649,7 +649,7 @@ fun Route.taskRoutes() {
 import io.ktor.server.routing.*
 import routes.taskRoutes
 
-fun Application.module() {
+fun Application.configureRouting() {
     routing {
         taskRoutes()
     }
