--- a/print.html
+++ b/print.html
@@ -780,7 +780,7 @@ fun Route.taskRoutes() {
 import io.ktor.server.routing.*
 import routes.taskRoutes
 
-fun Application.module() {
+fun Application.configureRouting() {
     routing {
         taskRoutes()
     }
