deploy: julianbrooks/comp2850-hci-mdbook@e73cad554c57eb5b703a8dffdf3d677f590c4ab5

--- a/print.html
+++ b/print.html
@@ -295,6 +295,7 @@ People-first language centres the person, not a diagnostic label.</p>
 <li><strong>Office hours</strong>: Contact teaching team for availability</li>
 <li><strong>Discussion board</strong>: MS Teams COMP2850 forum for all module peer/staff questions</li>
 <li><strong>Personal issues</strong>: Contact via Teams DM or email module staff directly</li>
+<li><strong>Bugs in course materials</strong>: If you spot errors, typos, or mismatches in the mdBook content, contact Julian Brooks (author of the HCI materials) at <a href="mailto:j.brooks2@leeds.ac.uk">j.brooks2@leeds.ac.uk</a></li>
 </ul>
 <hr />
 <h2 id="references"><a class="header" href="#references">References</a></h2>
