deploy: julianbrooks/comp2850-hci-mdbook@dc57ae4b23e7b8ae973a4bd551af3d9abbae6fdc

--- a/print.html
+++ b/print.html
@@ -2220,19 +2220,19 @@ Save: Swaps edit → view template (updated title)
 <h3 id="2-dual-path-implementation"><a class="header" href="#2-dual-path-implementation">2. Dual-Path Implementation</a></h3>
 <p><strong>HTMX path</strong> (JavaScript enabled):</p>
 <ol>
-<li>User clicks "Edit" button</li>
+<li>Customer clicks "Edit" button</li>
 <li><code>hx-get="/tasks/1/edit"</code> → server returns edit form HTML fragment</li>
 <li><code>hx-target="#task-1" hx-swap="outerHTML"</code> → replaces <code>&lt;li&gt;</code> with form</li>
-<li>User edits, clicks "Save"</li>
+<li>Customer edits, clicks "Save"</li>
 <li><code>hx-post="/tasks/1/edit"</code> → server validates, returns updated view fragment</li>
 <li>HTMX swaps form → view mode</li>
 <li>OOB status update announces "Task updated"</li>
 </ol>
 <p><strong>No-JS path</strong> (JavaScript disabled):</p>
 <ol>
-<li>User clicks "Edit" button</li>
+<li>Customer clicks "Edit" button</li>
 <li>GET <code>/tasks/1/edit</code> → full-page reload with edit form shown</li>
-<li>User edits, clicks "Save"</li>
+<li>Customer edits, clicks "Save"</li>
 <li>POST <code>/tasks/1/edit</code> → validates, redirects to <code>/tasks</code> (PRG)</li>
 <li>Page reloads showing updated task</li>
 </ol>
@@ -2261,7 +2261,7 @@ Save: Swaps edit → view template (updated title)
 <h3 id="4-focus-management"><a class="header" href="#4-focus-management">4. Focus Management</a></h3>
 <p><strong>Problem</strong>: When HTMX swaps DOM elements, focus can be lost.</p>
 <p><strong>Example</strong>:</p>
-<pre><code>1. User focuses "Edit" button
+<pre><code>1. Customer focuses "Edit" button
 2. Clicks Enter (activates button)
 3. HTMX swaps &lt;li&gt; → &lt;form&gt;
 4. Focus lost (button no longer exists)
