deploy: julianbrooks/comp2850-hci-mdbook@375be5e81e43e542b95b30487ef34ebb723a879d

--- a/wk06/wk6-lab2-needs-consent-backlog.html
+++ b/wk06/wk6-lab2-needs-consent-backlog.html
@@ -365,7 +365,7 @@ mkdir -p wk06/instrumentation
 touch wk06/research/consent-protocol.md
 touch wk06/research/stories.md
 touch wk06/research/notes.md
-touch wk06/backlog/backlog.csv
+touch backlog/backlog.csv
 touch wk06/instrumentation/plan.md
 </code></pre>
 <h3 id="step-2-document-consent-protocol"><a class="header" href="#step-2-document-consent-protocol">Step 2: Document Consent Protocol</a></h3>
@@ -715,7 +715,7 @@ If you change your mind after the interview:
 <p><strong>Time</strong>: 30 minutes
 <strong>Materials</strong>: Job stories, <code>backlog.csv</code> template</p>
 <h3 id="step-1-create-csv-headers"><a class="header" href="#step-1-create-csv-headers">Step 1: Create CSV Headers</a></h3>
-<p>Edit <code>wk06/backlog/backlog.csv</code>:</p>
+<p>Edit <code>backlog/backlog.csv</code>:</p>
 <pre><code class="language-csv">id,title,story_ref,story_type,need,type,severity,inclusion_risk,evidence,notes,candidate_fix
 </code></pre>
 <p><strong>Column definitions</strong>:</p>
@@ -953,7 +953,7 @@ Before leaving lab, confirm:
 - [ ] **Interviews completed**: At least 2 peer interviews (ideally 3-4)
 - [ ] **Notes saved**: `wk06/research/notes.md` with themes tagged
 - [ ] **Job stories written**: 5-6 stories in `wk06/research/stories.md` with evidence links
-- [ ] **Backlog populated**: 8+ items in `wk06/backlog/backlog.csv` with severity + inclusion risk
+- [ ] **Backlog populated**: 8+ items in `backlog/backlog.csv` with severity + inclusion risk
 - [ ] **Candidate fixes selected**: 1-2 items marked `candidate_fix=true`
 - [ ] **Instrumentation plan drafted**: `wk06/instrumentation/plan.md` outlines metrics for Week 9
 - [ ] **Code committed**: `git add wk06/`, `git commit -m "wk6-lab2: needs-finding + consent + backlog"`
