--- a/wk07/wk7-lab2-audit-backlog-fix.html
+++ b/wk07/wk7-lab2-audit-backlog-fix.html
@@ -739,7 +739,7 @@ None detected.
 <hr />
 <h2 id="activity-4-update-inclusive-backlog"><a class="header" href="#activity-4-update-inclusive-backlog">Activity 4: Update Inclusive Backlog</a></h2>
 <p><strong>Time</strong>: 25 minutes
-<strong>Materials</strong>: <code>wk06/backlog/backlog.csv</code>, audit findings</p>
+<strong>Materials</strong>: <code>backlog/backlog.csv</code>, audit findings</p>
 <h3 id="step-1-consolidate-findings"><a class="header" href="#step-1-consolidate-findings">Step 1: Consolidate Findings</a></h3>
 <p>Merge findings from:</p>
 <ul>
@@ -749,7 +749,7 @@ None detected.
 <li>Week 6 needs-finding interviews</li>
 </ul>
 <h3 id="step-2-add-new-backlog-items"><a class="header" href="#step-2-add-new-backlog-items">Step 2: Add New Backlog Items</a></h3>
-<p>Edit <code>wk06/backlog/backlog.csv</code>:</p>
+<p>Edit <code>backlog/backlog.csv</code>:</p>
 <pre><code class="language-csv">id,title,story_ref,story_type,need,type,severity,inclusion_risk,evidence,notes,candidate_fix
 9,Delete button text contrast 4.2:1 (fails AA),wk07/audit/axe-report.md#Issue2,WCAG violation,Visibility,Accessibility,High,"Low vision,Situational","axe: color-contrast; WCAG 1.4.3","Pico.css default gray #6c757d on white = 4.2:1; needs 4.5:1",true
 10,Focus outline too faint (Pico.css default),wk07/audit/wcag-checklist.md#2.4.7,WCAG partial,Visibility,Accessibility,Medium,Keyboard,"Manual test: outline visible but faint","Add custom :focus { outline: 3px solid #1976d2; }",true
